[gd_scene load_steps=7 format=3 uid="uid://dq4opma3tj3tg"]

[ext_resource type="Script" path="res://UI/scenes/UI.gd" id="1_nj4mk"]
[ext_resource type="Texture2D" uid="uid://crxgm4c5tbwfo" path="res://UI/scenes/camera_lock.png" id="2_bmi6m"]
[ext_resource type="Texture2D" uid="uid://ryx8dxikojx3" path="res://Assets/unobtainiumore.png" id="2_jk0v0"]
[ext_resource type="Texture2D" uid="uid://dx58i2idltuoq" path="res://Assets/iron.png" id="3_irp7w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3x13c"]
bg_color = Color(0.219608, 0.129412, 0.141176, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.054902, 0.054902, 0.054902, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oajvh"]
bg_color = Color(0.219608, 0.129412, 0.141176, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="UI" type="Control"]
layout_mode = 3
anchor_right = 0.678
anchor_bottom = 0.154
offset_right = -254.4
offset_bottom = 228.208
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nj4mk")

[node name="info_box" type="Panel" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
offset_right = 452.0
offset_bottom = 124.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3x13c")

[node name="unobtainium" type="Panel" parent="info_box"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.424
anchor_top = 0.5
anchor_right = 0.424
anchor_bottom = 0.5
offset_left = -153.144
offset_top = -44.0
offset_right = -63.144
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="unobtainium_icon" type="TextureRect" parent="info_box/unobtainium"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_jk0v0")
expand_mode = 1

[node name="unobtainium_value" type="Label" parent="info_box/unobtainium"]
layout_mode = 0
offset_left = 88.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="iron" type="Panel" parent="info_box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.5
offset_top = -46.0
offset_right = 136.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="iron_icon" type="TextureRect" parent="info_box/iron"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -10.0
offset_right = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_irp7w")
expand_mode = 1

[node name="iron_label" type="Label" parent="info_box/iron"]
layout_mode = 0
offset_left = 90.0
offset_top = 10.0
offset_right = 132.0
offset_bottom = 99.0
rotation = 0.000389292
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="UnitInfo" type="Panel" parent="info_box"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.076
anchor_top = 7.974
anchor_right = -0.076
anchor_bottom = 7.974
offset_left = 22.356
offset_top = -0.775997
offset_right = 303.356
offset_bottom = 128.224
grow_vertical = 0
scale = Vector2(2, 2)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oajvh")

[node name="CameraLockIcon" type="Panel" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 564.0
offset_right = 67.0
offset_bottom = 612.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CameraLockIcon"]
visible = false
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
texture = ExtResource("2_bmi6m")
expand_mode = 1
